force-app/main/default/objects/Therapy_Step_Completion__c/Therapy_Step_Completion__c.object-meta.xml
<CustomObject>
    <description>Tracks completion of structured therapy exercises (CBT steps, DBT skills, mindfulness exercises)</description>
    <label>Therapy Step Completion</label>
    <pluralLabel>Therapy Step Completions</pluralLabel>
    <nameField>
        <displayFormat>TSC-{0000}</displayFormat>
        <label>Therapy Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>