force-app/main/default/objects/Therapy_Step_Completion__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <label>Completion Time</label>
    <description>When the step was completed</description>
    <type>DateTime</type>
    <required>true</required>
    <defaultValue>NOW()</defaultValue>
</CustomField>