force-app/main/default/objects/Therapy_Step_Completion__c/fields/Daily_Routine__c.field-meta.xml
<CustomField>
    <fullName>Daily_Routine__c</fullName>
    <label>Daily Routine</label>
    <description>Lookup to parent Daily_Routine__c record</description>
    <type>Lookup</type>
    <referenceTo>Daily_Routine__c</referenceTo>
    <relationshipLabel>Therapy Step Completions</relationshipLabel>
    <relationshipName>Therapy_Step_Completions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>