force-app/main/default/objects/Therapy_Step_Completion__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <description>How long the step took to complete</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>