force-app/main/default/objects/Therapy_Step_Completion__c/fields/Effectiveness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Rating__c</fullName>
    <label>Effectiveness Rating</label>
    <description>How effective was this step (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>