force-app/main/default/objects/Therapy_Step_Completion__c/fields/Imposter_Syndrome_Session__c.field-meta.xml
<CustomField>
    <fullName>Imposter_Syndrome_Session__c</fullName>
    <label>Imposter Syndrome Session</label>
    <description>Optional lookup to imposter syndrome session</description>
    <type>Lookup</type>
    <referenceTo>Imposter_Syndrome_Session__c</referenceTo>
    <relationshipLabel>Therapy Step Completions</relationshipLabel>
    <relationshipName>Therapy_Step_Completions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>