force-app/main/default/objects/Therapy_Step_Completion__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <description>Step instructions or guidance text for therapy exercises</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>