force-app/main/default/objects/Therapy_Step_Completion__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Notes about the therapy step completion</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>