force-app/main/default/objects/Therapy_Step_Completion__c/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <description>Name of the therapy step (e.g., Identify Negative Thought)</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>