force-app/main/default/objects/Therapy_Step_Completion__c/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <label>Step Number</label>
    <description>Sequence number in therapy protocol</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>