force-app/main/default/objects/Therapy_Step_Completion__c/fields/Therapy_Type__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Type__c</fullName>
    <label>Therapy Type</label>
    <description>Type of therapy exercise</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBT</fullName>
            </value>
            <value>
                <fullName>DBT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Mindfulness</fullName>
            </value>
            <value>
                <fullName>Grounding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>