force-app/main/default/objects/Therapy_Step_Completion__c/fields/Was_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Was_Helpful__c</fullName>
    <label>Was Helpful</label>
    <description>Checkbox indicating if this step was helpful</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>