force-app/main/default/objects/Therapy_Step_Completion__c/validationRules/Duration_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Ensures duration is positive</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Duration_Minutes__c)),
    Duration_Minutes__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Duration_Minutes__c</errorDisplayField>
    <errorMessage>Duration must be a positive number.</errorMessage>
</ValidationRule>