force-app/main/default/objects/Therapy_Step_Completion__c/validationRules/Effectiveness_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Effectiveness_Rating_Range</fullName>
    <active>true</active>
    <description>Ensures effectiveness rating is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Effectiveness_Rating__c)),
    OR(Effectiveness_Rating__c &lt; 1, Effectiveness_Rating__c &gt; 10)
)</errorConditionFormula>
    <errorDisplayField>Effectiveness_Rating__c</errorDisplayField>
    <errorMessage>Effectiveness Rating must be between 1 and 10.</errorMessage>
</ValidationRule>