force-app/main/default/objects/Therapy_Step_Completion__c/validationRules/Step_Number_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Step_Number_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Ensures step number is positive</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Step_Number__c)),
    Step_Number__c &lt; 1
)</errorConditionFormula>
    <errorDisplayField>Step_Number__c</errorDisplayField>
    <errorMessage>Step Number must be a positive number.</errorMessage>
</ValidationRule>