force-app/main/default/objects/Therapy_Step_Completion__c/listViews/By_Therapy_Type.listView-meta.xml
<ListView>
    <fullName>By_Therapy_Type</fullName>
    <columns>NAME</columns>
    <columns>Therapy_Type__c</columns>
    <columns>Step_Name__c</columns>
    <columns>Completion_Time__c</columns>
    <columns>Effectiveness_Rating__c</columns>
    <columns>Duration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>By Therapy Type</label>
</ListView>