force-app/main/default/objects/Therapy_Step_Completion__c/listViews/Recent_Completions.listView-meta.xml
<ListView>
    <fullName>Recent_Completions</fullName>
    <columns>NAME</columns>
    <columns>Therapy_Type__c</columns>
    <columns>Step_Name__c</columns>
    <columns>Step_Number__c</columns>
    <columns>Completion_Time__c</columns>
    <columns>Effectiveness_Rating__c</columns>
    <columns>Was_Helpful__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Completions</label>
</ListView>